--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "oas-normalize": "^15.0.2",
     "openapi-mcp-generator": "^3.2.0",
     "openapi-types": "^12.1.3",
-    "typescript": "^5.9.2",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
