--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,3 +54,16 @@ jobs:
           cache: "npm"
       - run: npm ci --include=dev
       - run: npx prettier --check .
+
+  eslint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          cache: "npm"
+      - run: npm ci --include=dev
+      - run: npm run lint
