--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,10 @@ jobs:
           cache: "npm"
       - run: npm ci --include=dev
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm run test:coverage
+      - name: Vitest Coverage Report
+        uses: davelosert/vitest-coverage-report-action@v2.8.3
+        if: matrix.node-version == '20.x'
 
   audit:
     runs-on: ubuntu-latest
