--- a/aap-mcp.sample.yaml
+++ b/aap-mcp.sample.yaml
@@ -47,6 +47,7 @@ services:
 categories:
   # Phase 1
   job_management:
+    - controller.job_templates_launch_retrieve
     - controller.job_templates_launch_create
     - controller.workflow_job_templates_launch_create
     - controller.jobs_retrieve
@@ -55,6 +56,7 @@ categories:
     - controller.jobs_job_events_list
     - controller.jobs_cancel_create
     - controller.workflow_jobs_cancel_create
+    - controller.jobs_relaunch_retrieve
     - controller.jobs_relaunch_create
     - controller.workflow_jobs_relaunch_create
     - controller.jobs_list
